<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context=".activity.NovaViagem">

    <EditText
        android:id="@+id/eTextDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/login_edtext"
        android:backgroundTint="#C3373636"
        android:drawableLeft="@drawable/ic_action_destino"
        android:ems="10"
        android:hint="@string/hintnovodestino"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="7dp"
        android:selectAllOnFocus="false"
        android:text="@string/destino"
        android:textColor="#FFFFFF"
        android:textColorHint="#009688"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tViewMotivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/motivo"
        android:textColor="#EEE"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTextDestino" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="55dp"
        android:textColor="#EEE"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewMotivo">

        <RadioButton
            android:id="@+id/rbLazer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#EFF2F4"
            android:buttonTint="#4C4C4C"
            android:checked="true"
            android:paddingLeft="5dp"
            android:text="@string/lazer"
            android:textColor="#EEE"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbNegocios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#EFF2F4"
            android:buttonTint="#4C4C4C"
            android:paddingLeft="5dp"
            android:text="@string/negocios"
            android:textColor="#EEE"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/tViewDataInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:text="@string/datainicial"
        android:textColor="#EEE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tViewDataFim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tViewDataFim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:text="@string/datafim"
        android:textColor="#EEE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tViewDataInicial"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/bttDateIn"
        android:layout_width="55dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:background="#00373636"
        android:drawableStart="@drawable/ic_action_savedate"
        android:gravity="center_vertical"
        android:paddingLeft="23dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewDataInicial" />

    <Button
        android:id="@+id/bttDateOut"
        android:layout_width="55dp"
        android:layout_height="60dp"
        android:background="#00373636"
        android:drawableStart="@drawable/ic_action_savedate"
        android:gravity="center_vertical"
        android:paddingLeft="23dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/tViewDateOut"
        app:layout_constraintStart_toEndOf="@+id/tViewDateIn"
        app:layout_constraintTop_toBottomOf="@+id/tViewDataFim" />

    <TextView
        android:id="@+id/tViewDateIn"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_edtext"
        android:backgroundTint="#C3373636"
        android:hint="@string/datacheckin"
        android:paddingTop="5dp"
        android:text="@string/datain"
        android:textAlignment="center"
        android:textColor="#EEE"
        android:textColorHint="#009688"
        app:layout_constraintEnd_toStartOf="@+id/bttDateOut"
        app:layout_constraintStart_toEndOf="@+id/bttDateIn"
        app:layout_constraintTop_toBottomOf="@+id/tViewDataInicial" />

    <TextView
        android:id="@+id/tViewDateOut"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/login_edtext"
        android:backgroundTint="#C3373636"
        android:hint="@string/datacheckout"
        android:paddingTop="5dp"
        android:text="@string/dataout"
        android:textAlignment="center"
        android:textColor="#EEE"
        android:textColorHint="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bttDateOut"
        app:layout_constraintTop_toBottomOf="@+id/tViewDataFim" />

    <EditText
        android:id="@+id/eTextOrcamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_edtext"
        android:backgroundTint="#C3373636"
        android:drawableLeft="@drawable/ic_action_money"
        android:ems="10"
        android:hint="@string/hintorcamento"
        android:inputType="numberDecimal"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:selectAllOnFocus="false"
        android:text="@string/destino"
        android:textColor="#FFFFFF"
        android:textColorHint="#009688"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewDateIn" />

    <TextView
        android:id="@+id/tViewQtdPessoas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/qtdpessoas"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTextOrcamento" />

    <EditText
        android:id="@+id/eTextQtd"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/login_edtext"
        android:backgroundTint="#C3373636"
        android:drawableLeft="@drawable/ic_action_qtdpessoa"
        android:ems="10"
        android:hint="@string/hintqtdpessoa"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:selectAllOnFocus="false"
        android:text="@string/destino"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#009688"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eTextOrcamento" />

    <Button
        android:id="@+id/bttSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/login_button"
        android:drawableLeft="@drawable/ic_action_salvar"
        android:paddingLeft="60dp"
        android:paddingRight="55dp"
        android:text="@string/salvarviagem"
        android:textAlignment="center"
        android:textColor="#EFEBEB"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewQtdPessoas" />
</androidx.constraintlayout.widget.ConstraintLayout>