<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context=".activity.NovoGasto">

    <TextView
        android:id="@+id/tViewTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tipogasto"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spTipoGasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:background="@drawable/spinner_layout"
        android:entries="@array/tipogasto_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewTipo" />

    <TextView
        android:id="@+id/tViewValorGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="90dp"
        android:text="@string/valorgasto"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tViewDataGasto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTipoGasto" />

    <TextView
        android:id="@+id/tViewDataGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="55dp"
        android:text="@string/datagasto"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tViewValorGasto"
        app:layout_constraintTop_toBottomOf="@+id/spTipoGasto" />

    <EditText
        android:id="@+id/tViewValor"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_edtext"
        android:backgroundTint="#C3373636"
        android:drawableLeft="@drawable/ic_action_money"
        android:hint="@string/valor"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#EEE"
        android:textColorHint="#009688"
        app:layout_constraintEnd_toStartOf="@+id/bttDataGasto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewValorGasto" />

    <Button
        android:id="@+id/bttDataGasto"
        android:layout_width="55dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:background="#00373636"
        android:drawableStart="@drawable/ic_action_savedate"
        android:gravity="center_vertical"
        android:paddingLeft="23dp"
        app:layout_constraintEnd_toStartOf="@+id/tViewData"
        app:layout_constraintStart_toEndOf="@+id/tViewValor"
        app:layout_constraintTop_toBottomOf="@+id/spTipoGasto" />
    <TextView
        android:id="@+id/tViewData"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/login_edtext"
        android:backgroundTint="#C3373636"
        android:hint="@string/data"
        android:paddingTop="7dp"
        android:paddingBottom="6dp"
        android:textAlignment="center"
        android:textColor="#EEE"
        android:textColorHint="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bttDataGasto"
        app:layout_constraintTop_toBottomOf="@+id/tViewDataGasto" />

    <TextView
        android:id="@+id/tViewDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:text="@string/descricao"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewValor" />

    <TextView
        android:id="@+id/tViewLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:text="@string/local"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTextDescricao" />

    <EditText
        android:id="@+id/edTextDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:background="@drawable/login_edtext"
        android:backgroundTint="#C3373636"
        android:textColor="#EFEBEB"
        android:textColorHighlight="#F6F2F2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewDescricao" />

    <EditText
        android:id="@+id/edTextDadoLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:background="@drawable/login_edtext"
        android:backgroundTint="#C3373636"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dadolocal"
        android:textColor="#EFEBEB"
        android:textColorHighlight="#F6F2F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewLocal" />

    <Button
        android:id="@+id/bttGastei"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:paddingLeft="60dp"
        android:paddingRight="55dp"
        android:textAlignment="center"
        android:background="@drawable/login_button"
        android:drawableLeft="@drawable/ic_action_salvar"
        android:text="@string/gastei"
        android:textColor="#EFEBEB"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTextDadoLocal" />
</androidx.constraintlayout.widget.ConstraintLayout>