<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context=".activity.Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="335dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoprincipal" />

    <TextView
        android:id="@+id/tViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="296dp"
        android:shadowColor="#FFFFFF"
        android:singleLine="false"
        android:text="@string/usuario"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/login_edtext"
        android:drawableLeft="@drawable/ic_action_loginuser"
        android:ems="10"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        android:textColor="#EFEBEB"
        android:textColorHighlight="#F6F2F2"
        android:textColorHint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewLogin" />

    <TextView
        android:id="@+id/tViewSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="296dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/senha"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTextEmail" />

    <EditText
        android:id="@+id/edTextSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/login_edtext"
        android:drawableLeft="@drawable/ic_action_loginpass"
        android:ems="10"
        android:hint="**********"
        android:inputType="textPassword"
        android:password="true"
        android:textColor="#EFEBEB"
        android:textColorHighlight="#F6F2F2"
        android:textColorHint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tViewSenha" />

    <Button
        android:id="@+id/bttLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/login_button"
        android:drawableLeft="@drawable/ic_action_loginentrar"
        android:paddingLeft="95dp"
        android:paddingRight="95dp"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textColor="#EFEBEB"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTextSenha" />

    <Button
        android:id="@+id/bttConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="168dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/criarconta"
        android:textColor="#4CAF50"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>